{{$NEXT}}

Drivers:
* LT::Multext: The sixth character of nouns is not adjform. It is probably
  reflexivity.
* LT::Multext: The seventh character of adjectives, sixth of pronouns, seventh
  of numerals is better characterized as definiteness, although adjform is not
  exactly wrong.



3.013     2019-01-14 21:42:51+01:00 Europe/Prague

Features:
* Feature 'numform': added value 'combi' (combined digits + suffix).

Drivers:
* LT::Multext



3.012     2018-05-15 11:11:11+02:00 Europe/Prague

Interface:
* FS methods add_ufeatures() and get_ufeatures() now store unknown language-
  specific features or values in the 'other' feature (and set tagset to
  'mul::uposf').



3.011     2018-02-18 14:17:13+01:00 Europe/Prague

Features:
* Feature 'case': added values 'per' (perlative) and 'cns' (considerative).

Drivers:
* en::penn --> mul::upos conversion adjusted according to
  https://github.com/UniversalDependencies/docs/issues/157
  (verbal particles RP and alphanumeric list bullets LS)



3.010     2017-11-27 21:11:31+01:00 Europe/Prague

Drivers:
* pt::freeling should not encode "PA*" (pronoun-article) and "DR*" (relative
  determiner)



3.009     2017-11-27 16:15:22+01:00 Europe/Prague

Fixes:
* A value encoded by Atom should be deterministic even if the
  encoding map allows multiple paths.



3.008     2017-11-18 16:44:01+01:00 Europe/Prague

Features:
* Added feature 'clusivity' (inclusive vs. exclusive pronoun "we").



3.007     2017-10-25 18:03:12+02:00 Europe/Prague

3.006     2017-07-11 12:46:15+02:00 Europe/Prague

Features:
* Feature 'case': added values 'equ' and 'cmp', newly defined in UD v2.
* Feature 'degree': added value 'equ', newly defined in UD v2.
* Feature 'definite': added value 'spec', newly defined in UD v2.
* Feature 'number': added values 'count', 'tri', 'pauc', 'grpa', 'grpl' and
  'inv', newly defined in UD v2.
* Feature 'mood': added values 'prp' and 'adm', newly defined in UD v2.